--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "typescript": "^4.0.3"
   }
