--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
+    "eslint": "^7.12.0",
     "typescript": "^4.0.3"
   }
 }
