--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^14.14.2",
     "@types/react": "^16.9.53",
     "eslint": "^7.12.0",
+    "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
