--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/socket.io-client": "^1.4.34",
     "next": "9.5.5",
     "react": "17.0.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "17.0.1",
     "socket.io-client": "^2.3.1"
   },
